change fotns h1,h2 and add the text

--- a/index.html
+++ b/index.html
@@ -88,10 +88,13 @@
 
     <section id="about-info">
         <div class="container">
-            <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam impedit, quos sapiente, amet, distinctio
-                fugiat laboriosam totam dicta inventore odio deserunt saepe beatae aliquid esse quibusdam dolorem enim
-                incidunt quis."</p>
-            <p class="customer">- Podpis</p>
+            <p>Nie masz czasu, żeby zaangażować się w budowę, albo brakuje Ci wiedzy i doświadczenia, żeby zorganizować
+                proces budowlany? Chętnie pomożemy Ci w tej zawiłej drodze do wymarzonego domu. Wieloletnie uczestnictwo
+                w branży budowlanej pozwoliło nam zdobyć doświadczenie, kontakty, konkurencyjne ceny materiałów, usług
+                jak i umiejętności które pozwolą zbudować dom Twoich marzeń rzetelnie, szybko i rozsądnie bez zbędnych
+                wydatków. Zaoszczędzisz wiele czasu i niepotrzebnego stresu ciesząc się postępami prac na budowie mając
+                przy okazji wgląd w każdy etap budowy.</p>
+            <p class="customer">- Krzysztof Sipko</p>
         </div>
     </section>
 
@@ -111,12 +114,12 @@
                     </div>
                     <div class="card-box">
                         <h3 class="mbr-title mbr-fonts-style mbr-bold mbr-black display-5">
-                            LOREM
+                            ORGANIZACJA
                         </h3>
                         <p class="mbr-card-text mbr-fonts-style align-left display-7">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, error? Assumenda esse
-                            nostrum labore molestiae culpa amet aspernatur doloribus deserunt hic. Laudantium voluptatem
-                            eaque autem esse, nihil doloremque beatae eum!
+                            Zorganizujemy dla Państwa wszystkie potrzebne dokumenty do
+                            rozpoczęcia procesu budowy, osoby niezbędne w procesie budowlanym takie jak kierownik budowy
+                            czy architekt.
                         </p>
 
                     </div>
@@ -130,12 +133,11 @@
                     </div>
                     <div class="card-box">
                         <h3 class="mbr-title mbr-fonts-style mbr-bold mbr-black display-5">
-                            LOREM
+                            DORADZTWO
                         </h3>
                         <p class="mbr-card-text mbr-fonts-style align-left display-7">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, error? Assumenda esse
-                            nostrum labore molestiae culpa amet aspernatur doloribus deserunt hic. Laudantium voluptatem
-                            eaque autem esse, nihil doloremque beatae eum!
+                            Zoptymalizowanie kosztów budowy, oszczędność czasu i pieniędzy. Konsultowanie z inwestorem
+                            każdego etapu, doradztwo oraz fachowa pomoc w doborze materiałów budowlanych.
                         </p>
 
                     </div>
@@ -149,12 +151,12 @@
                     </div>
                     <div class="card-box">
                         <h3 class="mbr-title mbr-fonts-style mbr-bold mbr-black display-5">
-                            LOREM
+                            NADZÓR
                         </h3>
                         <p class="mbr-card-text mbr-fonts-style align-left display-7">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, error? Assumenda esse
-                            nostrum labore molestiae culpa amet aspernatur doloribus deserunt hic. Laudantium voluptatem
-                            eaque autem esse, nihil doloremque beatae eum!
+                            Koordynacja pracy pracowników i dostaw materiałów wysokiej jakości. Organizowanie
+                            sprawdzonych ekip
+                            budowlanych do poszczególnych etapów budowy tak aby nie było przestojów w czasie budowy.
                         </p>
 
                     </div>
