add icon and email adress

--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
 
     <section id="about-info">
         <div class="container">
-            <p>Nie masz czasu, żeby zaangażować się w budowę, albo brakuje Ci wiedzy i doświadczenia, żeby zorganizować
+            <p>Nie masz czasu, żeby zaangażować się w budowę? Brakuje Ci wiedzy i doświadczenia, żeby zorganizować
                 proces budowlany? Chętnie pomożemy Ci w tej zawiłej drodze do wymarzonego domu. Wieloletnie uczestnictwo
                 w branży budowlanej pozwoliło nam zdobyć doświadczenie, kontakty, konkurencyjne ceny materiałów, usług
-                jak i umiejętności które pozwolą zbudować dom Twoich marzeń rzetelnie, szybko i rozsądnie bez zbędnych
-                wydatków. Zaoszczędzisz wiele czasu i niepotrzebnego stresu ciesząc się postępami prac na budowie mając
-                przy okazji wgląd w każdy etap budowy.</p>
+                jak i umiejętności które pozwolą zbudować dom Twoich marzeń rzetelnie, szybko i rozsądnie, bez zbędnych
+                wydatków. Zaoszczędzisz wiele czasu i niepotrzebnego stresu ciesząc się postępami prac, mając przy
+                okazji wgląd w każdy etap budowy.</p>
             <p class="customer">- Krzysztof Sipko</p>
         </div>
     </section>
@@ -117,9 +117,9 @@
                             ORGANIZACJA
                         </h3>
                         <p class="mbr-card-text mbr-fonts-style align-left display-7">
-                            Zorganizujemy dla Państwa wszystkie potrzebne dokumenty do
-                            rozpoczęcia procesu budowy, osoby niezbędne w procesie budowlanym takie jak kierownik budowy
-                            czy architekt.
+                            Zorganizujemy dla Państwa wszystkie potrzebne dokumenty do rozpoczęcia procesu budowy, osoby
+                            niezbędne w procesie budowlanym takie jak kierownik budowy, architekt czy sprawdzeni
+                            wykonawcy godni polecenia i zaufania.
                         </p>
 
                     </div>
@@ -138,6 +138,8 @@
                         <p class="mbr-card-text mbr-fonts-style align-left display-7">
                             Zoptymalizowanie kosztów budowy, oszczędność czasu i pieniędzy. Konsultowanie z inwestorem
                             każdego etapu, doradztwo oraz fachowa pomoc w doborze materiałów budowlanych.
+                            <br>
+                            <br>
                         </p>
 
                     </div>
@@ -154,9 +156,11 @@
                             NADZÓR
                         </h3>
                         <p class="mbr-card-text mbr-fonts-style align-left display-7">
-                            Koordynacja pracy pracowników i dostaw materiałów wysokiej jakości. Organizowanie
-                            sprawdzonych ekip
-                            budowlanych do poszczególnych etapów budowy tak aby nie było przestojów w czasie budowy.
+                            Koordynacja pracy pracowników i dostaw materiałów. Organizowanie sprawdzonych ekip
+                            budowlanych do poszczególnych etapów budowy. Nadzór nad powierzonymi zleceniami
+                            podwykonawców.
+                            <br>
+                            <br>
                         </p>
 
                     </div>
@@ -251,10 +255,7 @@
                                     clip-rule="evenodd" />
                                 <path fill-rule="evenodd" d="M8 14a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd" />
                             </svg>&nbsp;tel. 000 000 000</p>
-                        <p><svg class="bi bi-circle-fill" width="0.5em" height="0.5em" viewBox="0 0 16 16"
-                                fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                <circle cx="8" cy="8" r="8" />
-                            </svg>&nbsp;Stargard 73-110</p>
+                        <p><span class="glyphicon glyphicon-envelope"></span>&nbsp;inwest@wp.pl</p>
                     </div>
                 </div>
             </div>
