change css fonts

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
             <p>Nie masz czasu, żeby zaangażować się w budowę? Brakuje Ci wiedzy i doświadczenia, żeby zorganizować
                 proces budowlany? Chętnie pomożemy Ci w tej zawiłej drodze do wymarzonego domu. Wieloletnie uczestnictwo
                 w branży budowlanej pozwoliło nam zdobyć doświadczenie, kontakty, konkurencyjne ceny materiałów, usług
-                jak i umiejętności które pozwolą zbudować dom Twoich marzeń rzetelnie, szybko i rozsądnie, bez zbędnych
-                wydatków. Zaoszczędzisz wiele czasu i niepotrzebnego stresu ciesząc się postępami prac, mając przy
+                jak i umiejętności które pozwolą zbudować dom Twoich marzeń rzetelnie, szybko i rozsądnie. Zaoszczędzisz
+                wiele czasu i niepotrzebnego stresu ciesząc się postępami prac, mając przy
                 okazji wgląd w każdy etap budowy.</p>
             <p class="customer">- Krzysztof Sipko</p>
         </div>
@@ -100,8 +100,8 @@
 
 
     <div class="container">
-        <h2 class="about-why">
-            Dlaczego warto korzystać z moich usług:</h2>
+        <!-- <h2 class="about-why">
+            Dlaczego warto korzystać z moich usług:</h2> -->
         <br>
 
 
@@ -113,11 +113,12 @@
                         <img src="img/card-3.jpg" alt="">
                     </div>
                     <div class="card-box">
-                        <h3 class="mbr-title mbr-fonts-style mbr-bold mbr-black display-5">
+                        <h4 class="mbr-title mbr-fonts-style mbr-bold mbr-black display-5">
                             ORGANIZACJA
-                        </h3>
+                        </h4>
                         <p class="mbr-card-text mbr-fonts-style align-left display-7">
-                            Zorganizujemy dla Państwa wszystkie potrzebne dokumenty do rozpoczęcia procesu budowy, osoby
+                            Zorganizujemy dla Państwa wszystkie potrzebne dokumenty do rozpoczęcia procesu budowy oraz
+                            osoby
                             niezbędne w procesie budowlanym takie jak kierownik budowy, architekt czy sprawdzeni
                             wykonawcy godni polecenia i zaufania.
                         </p>
@@ -132,13 +133,12 @@
                         <img src="img/card-1.jpg" alt="">
                     </div>
                     <div class="card-box">
-                        <h3 class="mbr-title mbr-fonts-style mbr-bold mbr-black display-5">
+                        <h4 class="mbr-title mbr-fonts-style mbr-bold mbr-black display-5">
                             DORADZTWO
-                        </h3>
+                        </h4>
                         <p class="mbr-card-text mbr-fonts-style align-left display-7">
                             Zoptymalizowanie kosztów budowy, oszczędność czasu i pieniędzy. Konsultowanie z inwestorem
                             każdego etapu, doradztwo oraz fachowa pomoc w doborze materiałów budowlanych.
-                            <br>
                             <br>
                         </p>
 
@@ -152,14 +152,13 @@
                         <img src="img/card-2.jpg" alt="html business template" title="">
                     </div>
                     <div class="card-box">
-                        <h3 class="mbr-title mbr-fonts-style mbr-bold mbr-black display-5">
+                        <h4 class="mbr-title mbr-fonts-style mbr-bold mbr-black display-5">
                             NADZÓR
-                        </h3>
+                        </h4>
                         <p class="mbr-card-text mbr-fonts-style align-left display-7">
                             Koordynacja pracy pracowników i dostaw materiałów. Organizowanie sprawdzonych ekip
                             budowlanych do poszczególnych etapów budowy. Nadzór nad powierzonymi zleceniami
                             podwykonawców.
-                            <br>
                             <br>
                         </p>
 
@@ -179,28 +178,24 @@
             <div class="row">
                 <div class="col-md-6 col-sm-6">
                     <div class="info-left">
-                        <h2>Info One</h2>
-                        <p>Adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                            consequat</p>
+                        <h2>Inwestor Zastępczy</h2>
+                        <p>To jednostka organizacyjna działająca odpłatnie w imieniu zamawiającego i odpowiedzialna
+                            przed nim za organizacje i koordynacje działań wszystkich stron uczestniczących w
+                            przedsięwzięciu inwestycyjnym.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-6">
                     <div class="info-right">
-                        <h2>Info Two</h2>
-                        <p>Adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                            consequat</p>
+                        <h2>Zastępstwo Inwerstycyjne</h2>
+                        <p>Nasze usługi kierujemy zarówno do osób indywidualnych marzących o własnym domu jak i do osób
+                            chcących budować nieruchomość w calach zarobkowych.</p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12 col-sm-12">
                         <div class="info-center">
-                            <h2>Info Three</h2>
-                            <p>Adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                                enim
-                                ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                consequat</p>
+                            <h2>Zasięg</h2>
+                            <p>Świadczymy usługi na terenie miasta oraz w całej gminie Stargard.</p>
                         </div>
                     </div>
                 </div>
