--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
         <!-- <h2 class="about-why">
             Dlaczego warto korzystać z moich usług:</h2> -->
         <br>
+        <br>
+        <br>
 
 
         <div class="row justify-content-center align-items-start">
@@ -119,8 +121,7 @@
                         <p class="mbr-card-text mbr-fonts-style align-left display-7">
                             Zorganizujemy dla Państwa wszystkie potrzebne dokumenty do rozpoczęcia procesu budowy oraz
                             osoby
-                            niezbędne w procesie budowlanym takie jak kierownik budowy, architekt czy sprawdzeni
-                            wykonawcy godni polecenia i zaufania.
+                            niezbędne w procesie budowlanym takie jak kierownik budowy, architekt czy wykonawcy robót.
                         </p>
 
                     </div>
@@ -138,7 +139,7 @@
                         </h4>
                         <p class="mbr-card-text mbr-fonts-style align-left display-7">
                             Zoptymalizowanie kosztów budowy, oszczędność czasu i pieniędzy. Konsultowanie z inwestorem
-                            każdego etapu, doradztwo oraz fachowa pomoc w doborze materiałów budowlanych.
+                            każdego etapu, doradztwo oraz fachowa pomoc w doborze materiałów i rozwiązań budowlanych.
                             <br>
                         </p>
 
@@ -157,8 +158,8 @@
                         </h4>
                         <p class="mbr-card-text mbr-fonts-style align-left display-7">
                             Koordynacja pracy pracowników i dostaw materiałów. Organizowanie sprawdzonych ekip
-                            budowlanych do poszczególnych etapów budowy. Nadzór nad powierzonymi zleceniami
-                            podwykonawców.
+                            budowlanych do poszczególnych etapów budowy. Uczestniczenie w próbach i odbiorach
+                            technicznych instalacji.
                             <br>
                         </p>
 
@@ -188,7 +189,7 @@
                     <div class="info-right">
                         <h2>Zastępstwo Inwerstycyjne</h2>
                         <p>Nasze usługi kierujemy zarówno do osób indywidualnych marzących o własnym domu jak i do osób
-                            chcących budować nieruchomość w calach zarobkowych.</p>
+                            chcących budować nieruchomość w celach zarobkowych.</p>
                     </div>
                 </div>
                 <div class="row">
