--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
             <p>Nie masz czasu, żeby zaangażować się w budowę? Brakuje Ci wiedzy i doświadczenia, żeby zorganizować
                 proces budowlany? Chętnie pomożemy Ci w tej zawiłej drodze do wymarzonego domu. Wieloletnie uczestnictwo
                 w branży budowlanej pozwoliło nam zdobyć doświadczenie, kontakty, konkurencyjne ceny materiałów, usług
-                jak i umiejętności które pozwolą zbudować dom Twoich marzeń rzetelnie, szybko i rozsądnie. Zaoszczędzisz
+                jak i umiejętności które pozwolą zbudować dom Twoich marzeń rzetelnie, szybko i zawsze zgodnie ze sztuką
+                budowlaną. Zaoszczędzisz
                 wiele czasu i niepotrzebnego stresu ciesząc się postępami prac, mając przy
                 okazji wgląd w każdy etap budowy.</p>
             <p class="customer">- Krzysztof Sipko</p>
@@ -157,8 +158,8 @@
                             NADZÓR
                         </h4>
                         <p class="mbr-card-text mbr-fonts-style align-left display-7">
-                            Koordynacja pracy pracowników i dostaw materiałów. Organizowanie sprawdzonych ekip
-                            budowlanych do poszczególnych etapów budowy. Uczestniczenie w próbach i odbiorach
+                            Koordynacja pracy pracowników i dostaw materiałów. Organizowanie rzetelnych wykonawców do
+                            poszczególnych etapów budowy. Uczestniczenie w próbach i odbiorach
                             technicznych instalacji.
                             <br>
                         </p>
@@ -187,9 +188,9 @@
                 </div>
                 <div class="col-md-6 col-sm-6">
                     <div class="info-right">
-                        <h2>Zastępstwo Inwerstycyjne</h2>
+                        <h2>Zastępstwo Inwestycyjne</h2>
                         <p>Nasze usługi kierujemy zarówno do osób indywidualnych marzących o własnym domu jak i do osób
-                            chcących budować nieruchomość w celach zarobkowych.</p>
+                            zainteresowanych budową budynków mieszklanych z myślą o ich dalszej sprzedaży.</p>
                     </div>
                 </div>
                 <div class="row">
