--- a/index.html
+++ b/index.html
@@ -121,8 +121,10 @@
                         </h4>
                         <p class="mbr-card-text mbr-fonts-style align-left display-7">
                             Zorganizujemy dla Państwa wszystkie potrzebne dokumenty do rozpoczęcia procesu budowy oraz
-                            osoby
-                            niezbędne w procesie budowlanym takie jak kierownik budowy, architekt czy wykonawcy robót.
+                            polecimy zaufane osoby takie jak kierownik budowy, architekt czy wykonawcy robót.&nbsp;
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                            <br>
                         </p>
 
                     </div>
